sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	var swap = true;
	var lrg = getNombreValeurs;
     while(swap)
     {
     	swap= false;
		for ( i<-lrg-2 to 0 by -1)
		{
			for (j <-0 to i)
			{
				val valeur=get Valeur(j);
				if( plusPetitQue(j+1, valeur))
				{
					echange(j,j+1);
					swap = true;
				}
			}
		}
     }
}
